--- a/XamarinForms_Udemy/AbsLayoutEx1.xaml
+++ b/XamarinForms_Udemy/AbsLayoutEx1.xaml
@@ -9,12 +9,12 @@
             <Label Text="$11.95" TextColor="#33353a" FontSize="60" FontAttributes="Bold" HorizontalOptions="Center" />
             <Button Text="Add $7.99 Credit" BackgroundColor="#1695A3" BorderRadius="15" HeightRequest="30" FontSize="15" FontAttributes="Bold" TextColor="White" />
         </StackLayout>
-        <StackLayout AbsoluteLayout.LayoutBounds=".33, 0, 1, .67" AbsoluteLayout.LayoutFlags="All" Padding="10, 20, 10, 0" Spacing="20" HorizontalOptions="Center">
+        <StackLayout AbsoluteLayout.LayoutBounds="0, .50, 1, .33" AbsoluteLayout.LayoutFlags="All" Padding="10, 20, 10, 0" Spacing="20" HorizontalOptions="Center">
             <Label Text="Why pay for credit?" FontSize="15" FontAttributes="Bold" HorizontalOptions="Center" />
             <Label FontSize="13" HorizontalTextAlignment="Center">
                 Because you can reach people who aren't on
-                SkyeApp by calling mobile and landline
-                numbers, or spending SMS, at low-cost rates.
+SkyeApp by calling mobile and landline
+numbers, or spending SMS, at low-cost rates.
             </Label>
         </StackLayout>
     </AbsoluteLayout>
